# paperAgent-mini

./: .env.example  .gitignore  AGENT_ROADMAP.md  README.md  mcp_paperagent_server.py  pyproject.toml
1st_folder/: .env.example  paper_reader_agent.py
src/paperagent/: PACKAGES.md  __init__.py  __main__.py  agents.py  arxiv_tool.py  cli.py  config.py  llm.py  workflow.py
tests/: test_smoke.py
