[project]
name = "paperagent-mini"
version = "0.2.0"
description = "Mini multi-agent paper review workflow inspired by Agent Laboratory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1",
    "mcp>=1.0",
    "openai>=1.55",
    "pypdf>=4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
paperagent = "paperagent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
